Fix horizontal scrollbar appearing

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   grid-template: 1fr 7fr / 1fr 7fr;
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
 
 }
 
